crates/hexray/tests/snapshots/snapshot_tests__sections_elf.snap
---
source: crates/hexray/tests/snapshot_tests.rs
expression: normalized
---
Idx  Name                     Address          Size             Flags   
---------------------------------------------------------------------------
