crates/hexray/tests/snapshots/snapshot_tests__strings_json.snap
---
source: crates/hexray/tests/snapshot_tests.rs
expression: redacted
---
{
  "strings": [
    {
      "address": "[ADDR]",
      "content": "Hello, World!",
      "encoding": "Ascii",
      "length": 13,
      "tags": []
    },
    {
      "address": "[ADDR]",
      "content": "This is a test string",
      "encoding": "Ascii",
      "length": 21,
      "tags": []
    }
  ],
  "total": 2
}
