crates/hexray/tests/snapshots/snapshot_tests__xrefs_json.snap
---
source: crates/hexray/tests/snapshot_tests.rs
expression: redacted
---
{
  "referenced_addresses": "[ADDR]",
  "total_xrefs": 21
}
